@@ -1,3 +1,7 @@
+2022-01-10  Matteo Corti  <matteo@corti.li>
+
+        * Makefile (dist): Disable extended attributes support
+
 2021-12-21  Matteo Corti  <matteo@corti.li>
 
         * Converted several documents to Markdown
